--- a/style_tip_calculator.css
+++ b/style_tip_calculator.css
@@ -962,6 +962,10 @@ h2 {
     justify-content: center;
 }
 
+.table-icon-container.offset {
+    right: 8px;
+}
+
 .late-container {
     display: flex;
     flex-direction: row;
